# ventrata-test-task

./: README.md  config.py  pyproject.toml
pages/: checkout_modal.py  contact_details_page.py  landing_page.py  payment_page.py  pickup_page.py  thank_you_page.py  tickets_page.py  travel_dates_page.py
tests/: conftest.py  test_checkout_modal.py  test_contact_details_page.py  test_payment_page.py  test_pickup_selection_page.py  test_tickets_page.py  test_travel_dates_page.py
utils/: helpers.py
