[project]
name = "ventrata"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "catfish", email = "stepan.sumec@gmail.com" }
]
dependencies = [
    "playwright>=1.44.0",
    "pytest>=8.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ventrata"]
